<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:layoutDirection="rtl"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".presentation.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:hint="@string/furniture_search"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconDrawable="@drawable/filter"
                app:endIconMode="custom"
                app:startIconDrawable="@drawable/search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_light"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:adjustViewBounds="true"
                android:contentDescription="@string/camera"
                android:padding="5dp"
                android:src="@drawable/small_cam"
                app:tint="@color/black" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:adjustViewBounds="true"
                android:contentDescription="@string/gift"
                android:padding="5dp"
                android:src="@drawable/gift" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/discoverFurniture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_weight="1.35"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/discover_best_furniture"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/view_more_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/view_more"
                android:textAlignment="textEnd"
                android:textColor="@color/light_grey"
                app:drawableEndCompat="@drawable/ic_view_more"
                app:drawableTint="@color/light_grey" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.35"
                android:drawablePadding="10dp"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/offers"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/offers" />

            <TextView
                android:id="@+id/view_more_offers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/view_more"
                android:textAlignment="textEnd"
                android:textColor="@color/light_grey"
                app:drawableEndCompat="@drawable/ic_view_more"
                app:drawableTint="@color/light_grey" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/offer_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="1"
            android:orientation="horizontal"
            tools:listitem="@layout/item_offer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.35"
                android:drawablePadding="10dp"
                android:fontFamily="@font/tajawal_bold"
                android:text="وفر حتى % 50"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/sales" />

            <TextView
                android:id="@+id/view_more_sales"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/view_more"
                android:textAlignment="textEnd"
                android:textColor="@color/light_grey"
                app:drawableEndCompat="@drawable/ic_view_more"
                app:drawableTint="@color/light_grey" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/safe_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="1"
            android:orientation="horizontal"
            tools:listitem="@layout/item_save" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.35"
                android:drawablePadding="10dp"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="center_vertical"
                android:text="الخصومات"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/discount" />

            <TextView
                android:id="@+id/view_more_discounts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/view_more"
                android:textAlignment="textEnd"
                android:textColor="@color/light_grey"
                app:drawableEndCompat="@drawable/ic_view_more"
                app:drawableTint="@color/light_grey" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/discount_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="1"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            tools:listitem="@layout/item_discount" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/branch_type_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="1"
            android:orientation="horizontal"
            tools:listitem="@layout/item_branch_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.35"
                android:drawablePadding="10dp"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="center_vertical"
                android:text="معارض بالقرب منك"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/nearby_gallaries" />

            <TextView
                android:id="@+id/view_more_nearby_gallaries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/view_more"
                android:textAlignment="textEnd"
                android:textColor="@color/light_grey"
                app:drawableEndCompat="@drawable/ic_view_more"
                app:drawableTint="@color/light_grey" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/galleries_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            tools:itemCount="3"
            tools:listitem="@layout/item_gallery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:fontFamily="@font/tajawal_bold"
                android:text="يمكنك الإطلاع على جميع منتجاتنا داخل المعرض والطلب اونلاين والحصول على خصومات مميزة"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/mid_cam" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/qr_code" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>